ghost/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  labels:
    app: ghost
spec:
  ports:
    - name: http
      port: 2368
      targetPort: 2368
  selector:
    app: ghost
  type: ClusterIP
